--- a/config/scaffolding/NewExternalPTestProject.yml
+++ b/config/scaffolding/NewExternalPTestProject.yml
@@ -6,4 +6,4 @@ packages:
   gitServerName: test
   gitUrl: https://github.com/Pooja-Anand-IBM-2
   gitUsername: Pooja-Anand-IBM-2
-  gitBranch: main
+  gitBranch: secondBranch
